completed part two

--- a/public/404.html
+++ b/public/404.html
@@ -10,7 +10,7 @@
 <meta name="title" content="404 Page not found" />
 <meta name="description" content="Bear Cub Demo" />
 <meta name="author" content="" />
-<meta name="keywords" content="syntax,themes,css,emoji,html,lean,markdown,math,privacy,shortcodes,text," />
+<meta name="keywords" content="lean,math," />
 
 
 
@@ -64,18 +64,6 @@
   <a href="/blog/">Blog</a>
 
 <a href='http://localhost:1313/index.xml'>RSS</a>
-
-
-
-
-  
-
-
-
-
-  
-    <a href="/pt/404.html">pt-BR 🇧🇷</a>
-  
 
 </nav>
 </header>
