--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <meta name="title" content="Home" />
 <meta name="description" content="Bear Cub Demo" />
 <meta name="author" content="" />
-<meta name="keywords" content="syntax,themes,css,emoji,html,lean,markdown,math,privacy,shortcodes,text," />
+<meta name="keywords" content="lean,math," />
 
 
 
@@ -71,19 +71,6 @@ Have fun.">
 
   <a href="/blog/">Blog</a>
 
-<a href='http://localhost:1313/index.xml'>RSS</a>
-
-
-
-
-  
-
-
-
-
-  
-    <a href="/pt/">pt-BR 🇧🇷</a>
-  
 
 </nav>
 </header>
